Fixed some alignment issues.

--- a/styles.css
+++ b/styles.css
@@ -388,7 +388,7 @@ nav #order a {
 
 .image-side img {
   width: 100%;
-  height: 300px;
+  height: 400px;
 }
 
 @media screen and (max-width: 1280px) {
@@ -401,6 +401,11 @@ nav #order a {
 
   .text-side h1 {
     font-size: 3vw;
+  }
+
+  .image-side img {
+    width: 100%;
+    height: 300px;
   }
 }
 
@@ -419,6 +424,11 @@ nav #order a {
 }
 
 @media screen and (max-width: 850px) {
+  .image-side img {
+    width: 100%;
+    height: 250px;
+  }
+
   .featured h2 {
     text-align: center;
   }
@@ -476,6 +486,10 @@ nav #order a {
 }
 
 @media screen and (max-width: 659px) {
+  .store-info {
+    padding: 0;
+  }
+
   nav .logo-container,
   nav .links,
   .image-side,
@@ -517,6 +531,7 @@ nav #order a {
   .intro {
     flex-direction: column;
     justify-content: center;
+    padding: 0;
   }
 
   main,
